--- a/click_app/templates/click_app/index.html
+++ b/click_app/templates/click_app/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>NAPRODAJE</title>
 </head>
 <body>
+<h2>Tekweruu</h2><div style="width: 100%; height: 100px;">
+
+    {% for product in products %}
+        <div style="display: inline-block; float: right; width: 200px;border: 1px solid green;">
+    <h1 style="text-align: center">{{ product.name }}</h1>
+    <p style="text-align: center">${{ product.price }}</p>
+    <p style="text-align: center">{{ product.time }}</p>{% endfor %}</div></div>
+
+    <p>No thing to show</p>
 
 </body>
 </html>
