--- a/click_app/static/click_app/style.css
+++ b/click_app/static/click_app/style.css
@@ -1,3 +1,22 @@
 li a{
     color: #560000;
 }
+
+.product{
+    display: inline-block;
+    float: right;
+    border: 2px solid #F0750A;
+}
+
+.container{
+    width: 500px; border: 3px dotted dimgray; height: auto; display: block;
+    margin: 0 auto;
+}
+.container h1{
+    text-align: center;
+    color: #5b80b2;
+}
+.time{
+    text-align: center;
+    color: cadetblue;
+}
